--- a/Retele_UI/client.ui
+++ b/Retele_UI/client.ui
@@ -227,7 +227,11 @@
         </spacer>
        </item>
        <item>
-        <widget class="QLineEdit" name="pass_input"/>
+        <widget class="QLineEdit" name="pass_input">
+         <property name="echoMode">
+          <enum>QLineEdit::Password</enum>
+         </property>
+        </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer_12">
@@ -252,7 +256,7 @@
       <x>0</x>
       <y>330</y>
       <width>361</width>
-      <height>25</height>
+      <height>28</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -270,14 +274,17 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="register_switch">
+      <widget class="QPushButton" name="register_switch">
        <property name="font">
         <font>
-         <pointsize>7</pointsize>
+         <pointsize>8</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>New account?Register!</string>
+        <string>No account?Register!</string>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
