--- a/Retele_UI/client.ui
+++ b/Retele_UI/client.ui
@@ -30,7 +30,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="login_page">
      <widget class="QWidget" name="layoutWidget">
@@ -215,7 +215,7 @@
           </font>
          </property>
          <property name="text">
-          <string>LOGIN</string>
+          <string>Login</string>
          </property>
         </widget>
        </item>
@@ -412,7 +412,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>270</y>
+        <y>260</y>
         <width>361</width>
         <height>61</height>
        </rect>
@@ -503,7 +503,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>340</y>
+        <y>370</y>
         <width>361</width>
         <height>28</height>
        </rect>
@@ -556,7 +556,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>380</y>
+        <y>410</y>
         <width>361</width>
         <height>28</height>
        </rect>
@@ -597,7 +597,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>0</x>
@@ -649,11 +649,11 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
-        <x>6</x>
-        <y>160</y>
+        <x>0</x>
+        <y>150</y>
         <width>351</width>
         <height>22</height>
        </rect>
@@ -694,11 +694,11 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>200</y>
+        <y>190</y>
         <width>361</width>
         <height>61</height>
        </rect>
@@ -778,6 +778,65 @@
           </spacer>
          </item>
         </layout>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>330</y>
+        <width>361</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_16">
+       <item>
+        <spacer name="horizontalSpacer_33">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="subscribe_check">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
+         <property name="layoutDirection">
+          <enum>Qt::RightToLeft</enum>
+         </property>
+         <property name="text">
+          <string>Subscribe</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+         <property name="tristate">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_34">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
